<resources>
    <string name="app_name">Trucker</string>
    <string name="prompt_email">Email address</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Go In</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="field_required">Required Field</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_tap_your_card">TapYourCard</string>
    <string name="tap_your_card">Tap Your Card</string>
    <string name="action_ok">OK</string>
    <string name="title_activity_settings">Settings</string>
    <string name="select_task">Select Task</string>
    <string name="prompt_customer_name">Customer Name</string>
    <string name="prompt_customer_contact">Customer Contact</string>
    <string name="prompt_customer_address">Customer Address</string>
    <string name="prompt_driver_name">Driver Name</string>
    <string name="prompt_driver_contact">Driver Contact</string>
    <string name="prompt_vehicle_number">Vehicle Number</string>
    <string name="prompt_note">Note</string>
    <string name="action_lets_go">Lets Go</string>
    <string name="title_tour">Trip</string>
    <string name="action_resume">Resume</string>
    <string name="action_complete">Complete</string>
    <string name="action_cancle">Cancel</string>
    <string name="list">List</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_time_in">Time-In</string>
    <string name="action_time_out">Time-Out</string>
    <string name="title_attendance">Attendance</string>
    <string name="title_task">Task</string>
    <string name="title_parking">Parking</string>
    <string name="prompt_task_name">Task name</string>
    <string name="prompt_task_note">Note</string>
    <string name="prompt_close_date">Close Date</string>
    <string name="title_on_going_details">On Going...</string>
    <string name="finger_title">Finger Print</string>
    <string name="Init">INIT</string>
    <string name="UnInit">UNINIT</string>
    <string name="Start">START</string>
    <string name="Stop">STOP</string>
    <string name="SyncCapture">SYNC CAPTURE</string>
    <string name="MatchISO">MATCH ISO(FMR)</string>
    <string name="ClearLog">CLEAR LOG</string>
    <string name="verification">Verification</string>
    <string name="register_new">Register</string>
    <string name="prompt_userid">User ID</string>
    <string name="scan">Scan</string>
    <string name="prompt_pan_number">Pan Number</string>
    <string name="prompt_quantity">Quantity</string>
    <string name="prompt_drive_number">Drive Number</string>
    <string name="prompt_gr_number">GR Number</string>
    <string name="prompt_city">City</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_task_list">Items</string>
    <string name="title_task_detail">Task Detail</string>

    <string-array name="MFS100Ver">
        <item>41</item>
        <item>31</item>
    </string-array>
    <!-- Authentication settings 0 phone 1-Email 2-NFC 3-FingerPrint-->
    <string-array name="Auth">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="title_activity_message">Message</string>
</resources>
