<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center_vertical|center_horizontal|top"
android:orientation="vertical"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:background="@color/backGround"
android:descendantFocusability="beforeDescendants"
android:focusableInTouchMode="true"
tools:context="com.letsgo.letsgo.SignUp">



    <LinearLayout android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal|top">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="@dimen/abc_action_bar_default_height"
            android:background="@color/titleBar"
            android:singleLine="true"
            android:text="@string/sign_up"
            android:textColor="@color/titleText"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="normal"
            android:gravity="center_vertical|center_horizontal"
            android:id="@+id/tourTextView" />
        <AutoCompleteTextView android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_name"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_marginBottom="10dp"
            android:textColor="@color/textBox"
            android:inputType="text" />
        <AutoCompleteTextView android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_phone"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_marginBottom="10dp"
            android:textColor="@color/textBox"
            android:inputType="phone" />
        <AutoCompleteTextView android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/textBox"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="left">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/selectedCityTextView" />
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cityCodeSpinner"
                android:spinnerMode="dialog"
                android:prompt="@string/prompt_city">
            </Spinner>
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imeiNumberTextView" />

        <Button android:id="@+id/lets_go_button"
            style="?android:textAppearanceSmall"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/success" />

    </LinearLayout>


</LinearLayout>
